user register, user login, bootstrap, ...

--- a/webclient/index.html
+++ b/webclient/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>DFS3 - Login</title>
+  <meta charset="utf-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+
+  <title>DFS3 - Login</title>
   <script type="module" src="index.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 1em; }
-    select, input { margin: 0.3em 0; display: block; }
-    .error { color: red; }
+
+body { }
+select, input { margin: 0.3em 0; display: block; }
+.error { color: red; }
+
   </style>
 </head>
-<body>
-  <h1>Iniciar sesión</h1>
-  <div id="login-form" class="hidden">
-    <label>Selecciona usuario:
-      <select id="user-select"></select>
-    </label>
-    <label>Contraseña:
-      <input type="password" id="password" />
-    </label>
-    <br>
-    <button id="login-btn">Iniciar sesión</button>
-    <button id="go-register">Registrar nuevo usuario</button>
-    <br>
-    <p class="error" id="error-msg"></p>
-    <pre id="output"></pre>
+<body class="bg-light">
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <img src="logo.png" alt="Logo DFS3" class="mb-3" style="max-width: 100px;" />
+            <h3 class="card-title text-center mb-4">Iniciar sesión</h3>
+            <div id="login-form">
+              <div class="mb-3">
+                <label for="user-select" class="form-label">Selecciona usuario:</label>
+                <select id="user-select" class="form-select"></select>
+              </div>
+
+              <div class="mb-3">
+                <label for="password" class="form-label">Contraseña:</label>
+                <input type="password" class="form-control" id="password" />
+              </div>
+
+              <div class="d-grid gap-2">
+                <button id="login-btn" class="btn btn-primary">Iniciar sesión</button>
+                <button id="go-register" class="btn btn-outline-secondary">Registrar nuevo usuario</button>
+              </div>
+
+              <div class="mt-3">
+                <p class="text-danger" id="error-msg"></p>
+                <pre id="output" class="small text-muted"></pre>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
