--- a/webclient/register.html
+++ b/webclient/register.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Registro DFS3</title>
+  <meta charset="utf-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+
+  <title>Registro DFS3</title>
   <script type="module" src="register.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 1em; }
-    input { margin: 0.3em 0; display: block; }
-    .error { color: red; }
+
+body { font-family: sans-serif; padding: 1em; }
+input { margin: 0.3em 0; display: block; }
+.error { color: red; }
+
   </style>
 </head>
+<!--
 <body>
   <h1>Registro de usuario DFS3</h1>
   <div id="register-form" class="hidden">
@@ -26,6 +34,60 @@
     <pre id="output"></pre>
     <br>
     <p><small>Los campos marcados con (*) son obligatorios</small></p>
+  </div>
+</body>
+-->
+<!-- Incluye Bootstrap en el <head> de tu HTML -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+<body class="bg-light">
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6 col-lg-5">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <img src="logo.png" alt="Logo DFS3" class="mb-3" style="max-width: 100px;" />
+            <h3 class="card-title text-center mb-4">Registro de usuario</h3>
+
+            <div id="register-form">
+              <div class="mb-3">
+                <label for="alias" class="form-label">Alias<sup>*</sup>:</label>
+                <input type="text" id="alias" class="form-control" required />
+              </div>
+
+              <div class="mb-3">
+                <label for="fullname" class="form-label">Nombre completo:</label>
+                <input type="text" id="fullname" class="form-control" />
+              </div>
+
+              <div class="mb-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" id="email" class="form-control" />
+              </div>
+
+              <div class="mb-3">
+                <label for="password1" class="form-label">Contraseña<sup>*</sup>:</label>
+                <input type="password" id="password1" class="form-control" required />
+              </div>
+
+              <div class="mb-3">
+                <label for="password2" class="form-label">Repite contraseña<sup>*</sup>:</label>
+                <input type="password" id="password2" class="form-control" required />
+              </div>
+
+              <div class="d-grid gap-2">
+                <button type="submit" id="register-btn" class="btn btn-primary">Registrar</button>
+              </div>
+
+              <p class="text-danger mt-3" id="error-msg"></p>
+              <pre id="output" class="text-muted small"></pre>
+
+              <p class="mt-3"><small class="text-muted">Los campos marcados con (*) son obligatorios.</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
