--- a/webclient/index.html
+++ b/webclient/index.html
@@ -2,55 +2,55 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-
-  <title>DFS3 - Login</title>
   <script type="module" src="index.js"></script>
-  <style>
-
-body { }
-select, input { margin: 0.3em 0; display: block; }
-.error { color: red; }
-
-  </style>
+  <title>dfs3 - Mis archivos</title>
 </head>
 <body class="bg-light">
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <img src="logo.png" alt="Logo DFS3" class="mb-3" style="max-width: 100px;" />
-            <h3 class="card-title text-center mb-4">Iniciar sesión</h3>
-            <div id="login-form">
-              <div class="mb-3">
-                <label for="user-select" class="form-label">Selecciona usuario:</label>
-                <select id="user-select" class="form-select"></select>
-              </div>
+  <div class="container py-4">
+    <!-- Cabecera -->
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <div class="d-flex align-items-center">
+        <img src="img/logo.png" alt="Logo DFS3" style="max-height: 50px;" class="me-3" />
+        <h2 class="mb-0">Mis archivos</h2>
+      </div>
+      <div>
+        <span class="me-3">Hola, <strong id="user-alias">usuario</strong></span>
+        <button id="logout-btn" class="btn btn-outline-danger btn-sm">Cerrar sesión</button>
+      </div>
+    </div>
 
-              <div class="mb-3">
-                <label for="password" class="form-label">Contraseña:</label>
-                <input type="password" class="form-control" id="password" />
-              </div>
+    <!-- Botón subir archivo -->
+    <div class="mb-3 text-end">
+      <button class="btn btn-primary" id="new-upload-btn">Subir archivo</button>
+    </div>
 
-              <div class="d-grid gap-2">
-                <button id="login-btn" class="btn btn-primary">Iniciar sesión</button>
-                <button id="go-register" class="btn btn-outline-secondary">Registrar nuevo usuario</button>
-              </div>
-
-              <div class="mt-3">
-                <p class="text-danger" id="error-msg"></p>
-                <pre id="output" class="small text-muted"></pre>
-              </div>
-            </div>
-          </div>
-        </div>
+    <!-- Tabla de archivos -->
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <table class="table table-hover" id="file-table">
+          <thead class="table-light">
+            <tr>
+              <th>Nombre</th>
+              <th>Tamaño</th>
+              <th>Fecha de Creación</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="file-list">
+            <!-- Se insertan dinámicamente -->
+          </tbody>
+        </table>
+        <p id="empty-msg" class="text-muted text-center">No hay archivos aún.</p>
       </div>
     </div>
   </div>
+<footer class="text-center text-muted mt-5 small">
+  TFG: Sistema Blockchain de Almacenamiento Distribuido para Dispositivos IoT <br> Universidad Internacional de La Rioja (UNIR) · José Ignacio Bravo &lt;<a href="mailto:nacho.bravo@gmail.com">nacho.bravo@gmail.com</a>&gt; · 2025
+</footer>
 </body>
 </html>
