--- a/webclient/index.html
+++ b/webclient/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script type="module" src="index.js"></script>
@@ -20,13 +21,19 @@
       </div>
       <div>
         <span class="me-3">Hola, <strong id="user-alias">usuario</strong></span>
-        <button id="logout-btn" class="btn btn-outline-danger btn-sm">Cerrar sesión</button>
+        <button id="logout-btn" class="btn btn-outline-danger btn-sm">
+          <i class="bi bi-box-arrow-right me-1"></i>
+          Cerrar sesión
+        </button>
       </div>
     </div>
 
     <!-- Botón subir archivo -->
     <div class="mb-3 text-end">
-      <button class="btn btn-primary" id="new-upload-btn">Subir archivo</button>
+      <button class="btn btn-primary" id="new-upload-btn">
+        <i class="bi bi-upload me-1"></i>
+        Subir archivo
+      </button>
     </div>
 
     <!-- Tabla de archivos -->
@@ -39,6 +46,7 @@
               <th>Tamaño</th>
               <th>Fecha de Creación</th>
               <th>Acciones</th>
+              <th>Tipo</th>
             </tr>
           </thead>
           <tbody id="file-list">
@@ -50,7 +58,11 @@
     </div>
   </div>
 <footer class="text-center text-muted mt-5 small">
-  TFG: Sistema Blockchain de Almacenamiento Distribuido para Dispositivos IoT <br> Universidad Internacional de La Rioja (UNIR) · José Ignacio Bravo &lt;<a href="mailto:nacho.bravo@gmail.com">nacho.bravo@gmail.com</a>&gt; · 2025
+  <p>
+    TFG: Sistema Blockchain de Almacenamiento Distribuido para Dispositivos IoT <br> 
+    Universidad Internacional de La Rioja (UNIR) · José Ignacio Bravo &lt;
+    <a href="mailto:nacho.bravo@gmail.com">nacho.bravo@gmail.com</a>&gt; · 2025
+  </p>
 </footer>
 </body>
 </html>
