--- a/webclient/index.html
+++ b/webclient/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script type="module" src="index.js"></script>
   <title>dfs3 - Mis archivos</title>
 </head>
@@ -59,10 +60,34 @@
   </div>
 <footer class="text-center text-muted mt-5 small">
   <p>
-    TFG: Sistema Blockchain de Almacenamiento Distribuido para Dispositivos IoT <br> 
-    Universidad Internacional de La Rioja (UNIR) · José Ignacio Bravo &lt;
-    <a href="mailto:nacho.bravo@gmail.com">nacho.bravo@gmail.com</a>&gt; · 2025
+    José Ignacio Bravo Vicente &lt;<a href="mailto:nacho.bravo@gmail.com">nacho.bravo@gmail.com</a>&gt;,
+    UNIR - Universidad Internacional de La Rioja (2025)<br>
+    <i>Sistema Blockchain de Almacenamiento Distribuido para Dispositivos IoT</i>
   </p>
 </footer>
+
+<!-- Modal para compartir -->
+<div class="modal fade" id="shareModal" tabindex="-1" aria-labelledby="shareModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="shareModalLabel">Compartir archivo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <label for="user-select" class="form-label">Selecciona el usuario:</label>
+        <select id="user-select" class="form-select">
+          <option selected disabled>Elige un alias...</option>
+        </select>
+        <div class="alert alert-danger mt-3 d-none" id="share-error"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" id="confirm-share-btn">Compartir</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
