--- a/webclient/selector.html
+++ b/webclient/selector.html
@@ -2,15 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Seleccionar nodo DFS3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script type="module" src="selector.js"></script>
+  <title>dfs3 - Seleccionar nodo</title>
 </head>
-<body class="container py-5">
+<body class="bg-light">
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-5">
